[project]
name = "runtime_graph"
version = "0.1.0"
description = "Meta-Agent runtime graph"
requires-python = ">=3.12"
dependencies = [
    "typing-extensions",
    "openai",
    "python-dotenv",
    "langchain-openai",
    "langchain-groq",
    "langgraph",
    "langchain-core",
    "pydantic",
    "colorlog",
    "langchain-anthropic>=0.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
runtime-graph = "src.main:cli"
